--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mysite",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://whatswrong7alex.github.io/whatswrong7alex",
+  "homepage": "https://whatswrong7alex.github.io/mybooksite",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
